[tool.poetry]
name = "tex_to_pdf"
version = "0.1.0"
description = ""
authors = ["Baris Üctas <baris.uectas@dvs.ag>"]

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^1.26.0"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
